[package]
name = "reth-seismic-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-primitives-traits.workspace = true
reth-seismic-primitives = { workspace = true, features = ["serde", "reth-codec"] }
reth-trie-common.workspace = true
reth-storage-api = { workspace = true, features = ["db-api"] }

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
reth-ethereum-forks.workspace = true
revm.workspace = true

[dev-dependencies]
reth-codecs = { workspace = true, features = ["test-utils"] }
reth-db-api.workspace = true
reth-prune-types.workspace = true
reth-stages-types.workspace = true

[features]
default = ["std"]
std = [
    "reth-trie-common/std",
    "reth-storage-api/std",
    "alloy-primitives/std",
    "revm/std",
    "reth-prune-types/std",
    "reth-stages-types/std",
    "alloy-consensus/std",
    "reth-chainspec/std",
    "reth-seismic-primitives/std",
    "reth-primitives-traits/std",
    "alloy-eips/std",
]
